 - Add unit tests to the memorycheck
 - Add call to clean up libxml2 parser at exit
 - Remove unecessary arguments in DofMap member functions
 - Remove reference constructors from DofMap, FiniteElement and FunctionSpace
 - Use a shared_ptr to store the mesh in DofMap objects 
 - Interface change for wrapper code: PoissonBilinearForm --> Poisson::BilinearForm
 - Add function info_underline() for writing underlined messages
 - Rename message() --> info() for "compatibility" with Python logging module
 - Add elementwise multiplication in GeneriVector interface
 - GenericVector interface in PyDOLFIN now support the sequence protocol
 - Rename of camelCaps functions names: fooBar --> foo_bar
   Note: mesh.numVertices() --> mesh.num_vertices(), mesh.numCells() --> mesh.num_cells()
 - Add slicing capabilities for GenericMatrix interface in PyDOLFIN (only getitem)
 - Add slicing capabilities for GenericVector interface in PyDOLFIN
 - Add sum to GenericVector interface
0.9.2 [2009-04-07]
 - Enable setting parameters for Newton solver in VariationalProblem
 - Simplified and improved implementation of C++ plotting, calling Viper on command-line
 - Remove precompiled elements and projections
 - Automatically interpolate user-defined functions on assignment
 - Add new built-in function MeshCoordinates, useful in ALE simulations
 - Add new constructor to Function class, Function(V, "vector.xml")
 - Remove class Array (using std::vector instead)
 - Add vector_mapping data to MeshData
 - Use std::vector instead of Array in MeshData
 - Add assignment operator and copy constructor for MeshFunction
 - Add function mesh.move(other_mesh) for moving mesh according to matching mesh (for FSI)
 - Add function mesh.move(u) for moving mesh according to displacement function (for FSI)
 - Add macro dolfin_not_implemented()
 - Add new interpolate() function for interpolation of user-defined function to discrete
 - Make _function_space protected in Function